trying to fix wrapper overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
  }
 
  .top {
-   height: 100%;
+   height: calc(100vh - 100px);
     
  }
 
